# PortfolioCraft

./: How to use this package.ipynb  README.md  Stocks_data.csv  __init__.py  final_test.ipynb  pyproject.toml  requirements (1).txt  showing the equality of qiskit functiion and my function.ipynb
portfoliocraft.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
