[project]
name = "portfoliocraft"
version = "0.1.0"
description = "Comprehensive package for Formulating Portfolio Optimization function"
authors = [
    { name = "Sangram Deshpande", email = "deshpande.sangram156@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = ["docplex==2.29.241", "numpy==2.2.5", "qiskit_optimization==0.6.1"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
